--- a/Site about Mars/style.css
+++ b/Site about Mars/style.css
@@ -29,19 +29,130 @@ p{
 
 .nav-section {
     height: calc(100vh - 162px);
-    width: 138px;
-    border: solid;
+    width: 430px;
     position: fixed;
     display: flex;
     right: 0;
     top: 50%;
-    transform:translate(0,-50%);
+    transform:translate(292px,-50%);
     background-color: #3E4761;
-    padding: 50px 53px 0px 33px;
+    transition:1.0s;
+    z-index: 1234567890;
 }
-
 .nav-text{
     writing-mode: vertical-lr;
     text-orientation: upright;
     color: white;
+}
+
+.section-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 53px 0px 33px;
+}
+
+.section-right-container a{
+    color: white;
+    text-decoration: none;
+}
+
+.section-right-container {
+    display: flex;
+    flex-direction: column;
+    padding: 150px 0 150px;
+    gap: 41px;
+}
+
+.nav-section:hover {
+    transform:translate(0, -50%);
+}
+
+.header-section{
+    background-color:#222735;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+}
+
+.header-bg{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.header-content{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    color: white;
+    display: flex;
+    top: 0;
+    left: 0;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-left: 60px;
+    align-items: flex-start;
+}
+
+.header-content h1{
+    text-transform: uppercase;
+}
+
+.header-planet{
+    right:0;
+    bottom:0;
+    position: absolute;
+}
+
+.header-rocket {
+    position: absolute;
+    left: 22%;
+    bottom: 32%;
+}
+
+.header-section button{
+    background-color: #3E4761;
+    color: white;
+    padding: 25px 100px;
+    font-size: 22px;
+    border: none;
+}
+
+.about-container{
+    background-image:linear-gradient(#212633, #2B344B);
+    color:white;
+    display: flex;
+    height: 100vh;
+    position: relative;
+}
+
+.about-left {
+    width: 50%;
+    padding: 85px 74px;
+}
+
+.about-right {
+    width: 50%;
+    padding: 130px 150px 0 0;
+}
+
+.about-planet {
+    height: 80%;
+    position: absolute;
+}
+
+.about-alien {
+    background-image:url("img/section-2-alien.svg");
+    width: 155px;
+    height: 197px;
+    position: absolute;
+    left: 175px;
+    bottom: 43%;
+}
+
+.about-alien-eye{
+    position: absolute;
+    left: 69px;
+    bottom: 57%;
 }
