--- a/Site about Mars/style.css
+++ b/Site about Mars/style.css
@@ -1,158 +1,317 @@
-
-@font-face{
-    src:url(font/Gputeks-Regular.woff)format ("woff"), url("font/Gputeks-Regular.woff2") format("woff2");
-    font-family: "Gputeks";
+@font-face {
+  src: url(font/Gputeks-Regular.woff) format ("woff"),
+    url("font/Gputeks-Regular.woff2") format("woff2");
+  font-family: "Gputeks";
 }
 
-*{
-    font-family: "Gputeks";
-    padding: 0;
-    margin: 0;
-    box-sizing:border-box;
+* {
+  font-family: "Gputeks";
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-html{
-    font-size: 30px;
+html {
+  font-size: 30px;
 }
 
-h1{
-    font-size: 6rem;
+h1 {
+  font-size: 6rem;
 }
 
-h2{
-    font-size: 2rem;
+h2 {
+  font-size: 2rem;
 }
 
-p{
-    font-size: 1rem;
+p {
+  font-size: 1rem;
 }
 
 .nav-section {
-    height: calc(100vh - 162px);
-    width: 430px;
-    position: fixed;
-    display: flex;
-    right: 0;
-    top: 50%;
-    transform:translate(292px,-50%);
-    background-color: #3E4761;
-    transition:1.0s;
-    z-index: 1234567890;
+  height: calc(100vh - 162px);
+  width: 430px;
+  position: fixed;
+  display: flex;
+  right: 0;
+  top: 50%;
+  transform: translate(292px, -50%);
+  background-color: #3e4761;
+  transition: 1s;
+  z-index: 1234567890;
 }
-.nav-text{
-    writing-mode: vertical-lr;
-    text-orientation: upright;
-    color: white;
+.nav-text {
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  color: white;
 }
 
 .section-left {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 50px 53px 0px 33px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 53px 0px 33px;
 }
 
-.section-right-container a{
-    color: white;
-    text-decoration: none;
+.section-right-container a {
+  color: white;
+  text-decoration: none;
 }
 
 .section-right-container {
-    display: flex;
-    flex-direction: column;
-    padding: 150px 0 150px;
-    gap: 41px;
+  display: flex;
+  flex-direction: column;
+  padding: 150px 0 150px;
+  gap: 41px;
 }
 
 .nav-section:hover {
-    transform:translate(0, -50%);
+  transform: translate(0, -50%);
 }
 
-.header-section{
-    background-color:#222735;
-    height: 100vh;
-    width: 100%;
-    position: relative;
+.header-section {
+  background-color: #222735;
+  height: 100vh;
+  width: 100%;
+  position: relative;
 }
 
-.header-bg{
-    position: absolute;
-    height: 100%;
-    width: 100%;
+.header-bg {
+  position: absolute;
+  height: 100%;
+  width: 100%;
 }
 
-.header-content{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    color: white;
-    display: flex;
-    top: 0;
-    left: 0;
-    flex-direction: column;
-    justify-content: space-around;
-    padding-left: 60px;
-    align-items: flex-start;
+.header-content {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  color: white;
+  display: flex;
+  top: 0;
+  left: 0;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 60px;
+  align-items: flex-start;
 }
 
-.header-content h1{
-    text-transform: uppercase;
+.header-content h1 {
+  text-transform: uppercase;
 }
 
-.header-planet{
-    right:0;
-    bottom:0;
-    position: absolute;
+.header-planet {
+  right: 0;
+  bottom: 0;
+  position: absolute;
 }
 
 .header-rocket {
-    position: absolute;
-    left: 22%;
-    bottom: 32%;
+  position: absolute;
+  left: 22%;
+  top: 25%;
+  animation: rocket-flight 5s 1 forwards linear;
 }
 
-.header-section button{
-    background-color: #3E4761;
-    color: white;
-    padding: 25px 100px;
-    font-size: 22px;
-    border: none;
+@keyframes rocket-flight {
+  0% {
+    top: 100%;
+    left: 0;
+    transform: rotate(90deg);
+  }
+
+  40% {
+    top: 100px;
+    left: 250px;
+    transform: rotate(45deg);
+  }
+  100% {
+    top: 200px;
+    left: 500px;
+    transform: rotate(0);
+  }
 }
 
-.about-container{
-    background-image:linear-gradient(#212633, #2B344B);
-    color:white;
-    display: flex;
-    height: 100vh;
-    position: relative;
+.header-section button {
+  background-color: #3e4761;
+  color: white;
+  padding: 25px 100px;
+  font-size: 22px;
+  border: none;
+}
+
+.about-container {
+  background-image: linear-gradient(#212633, #2b344b);
+  color: white;
+  display: flex;
+  height: 100vh;
+  position: relative;
 }
 
 .about-left {
-    width: 50%;
-    padding: 85px 74px;
+  width: 50%;
+  padding: 85px 74px;
 }
 
 .about-right {
-    width: 50%;
-    padding: 130px 150px 0 0;
+  width: 50%;
+  padding: 130px 150px 0 0;
 }
 
 .about-planet {
-    height: 80%;
-    position: absolute;
+  height: 80%;
+  position: absolute;
 }
 
 .about-alien {
-    background-image:url("img/section-2-alien.svg");
-    width: 155px;
-    height: 197px;
-    position: absolute;
-    left: 175px;
-    bottom: 43%;
+  background-image: url("img/section-2-alien.svg");
+  width: 155px;
+  height: 197px;
+  position: absolute;
+  left: 175px;
+  bottom: 43%;
+  animation: alien-body 3s infinite alternate linear;
 }
 
-.about-alien-eye{
-    position: absolute;
-    left: 69px;
-    bottom: 57%;
+@keyframes alien-body{
+
+    0%{
+        transform:translateY(0);
+    }
+    100%{
+        transform:translateY(70%);
+    }
+}
+
+@keyframes alien-eye{
+
+    0%{
+      transform:translateX(-90%);
+    }
+
+    100%{
+      transform:translateX(75%);
+    }
+}
+
+.about-alien-eye {
+  position: absolute;
+  left: 69px;
+  bottom: 57%;
+  animation: alien-eye 1s infinite alternate linear;
+}
+
+.footer {
+  width: 100%;
+  height: 377px;
+  background-color: #ffb876;
+  letter-spacing: 15px;
+  text-align: center;
+}
+
+.footer p {
+  padding-top: 160px;
+  font-size: 30px;
+}
+
+.section-study {
+  height: 100vh;
+  background-image: url("img/section-3-bg.svg"),
+    linear-gradient(#2a3348, #242a3a);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: 100%;
+  color: white;
+}
+
+.study-top {
+  height: 50%;
+  padding: 40px 150px 121px 77px;
+}
+
+.study-bottom {
+  height: 50%;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.study-container {
+  display: flex;
+  gap: 115px;
+}
+
+.study-rovers {
+  display: flex;
+  gap: 80px;
+}
+
+.study-rovers p {
+  font-size: 0.5rem;
+}
+
+.section-study h2 {
+  padding-bottom: 60px;
+}
+
+.study-alien,
+.study-rover {
+  height: 75%;
+  position: absolute;
+}
+
+.study-rover{
+  left: 40%;
+  animation: rover-move 10s infinite forwards; 
+  /* transform:rotateY(180deg); */
+}
+
+@keyframes rover-move {
+
+    0%{
+      left: 20%;
+    }
+    15%{
+      left:60;
+      transform:rotateY(0deg);
+    }
+    30%{
+      transform:rotateY(180deg);
+      left: 60%;
+    }
+    50%{
+      left: 40%;
+      transform:rotateY(180deg);
+    }
+    70%{
+      left: 40%;
+      transform:rotateY(180deg);
+    }
+    100%{
+      left: 100%;
+      transform:rotateY(180deg);
+    }
+}
+
+.study-alien{
+  animation: alien-move 10s infinite forwards;
+}
+
+@keyframes alien-move{
+    0%{
+      left: -20%
+    }
+}
+
+.mars-moons {
+  background-color: #ffb762;
+  text-align: center;
+  height: 100vh;
+}
+
+.mars-orbit {
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  border: 5px white solid;
+  margin: auto;
 }
